# ddpm-flood

./: .gitignore  EXPERIMENT_PLAN.md  HANDOVER_V2.md  PROGRESS.md  PROJECT_HANDOFF.md  download_cera.sh  main.py  pyproject.toml  tacc_download_script.sh  visualize_flood.py
data/validation/: battery_tide_sandy.csv  sandy_hwm.csv  sandy_instruments.csv
data/validation/sandy_inundation_zone/: geo_export_f857cf46-8131-45cf-af95-745c9c38d90e.dbf  geo_export_f857cf46-8131-45cf-af95-745c9c38d90e.shx
